setup codorva for building apps

--- a/package.json
+++ b/package.json
@@ -17,5 +17,8 @@
     "react": "^0.13.3",
     "react-router": "^0.13.3",
     "reapp": "^0.8.28"
+  },
+  "devDependencies": {
+    "cordova": "^5.2.0"
   }
 }
