--- a/package.json
+++ b/package.json
@@ -14,9 +14,14 @@
   "license": "ISC",
   "dependencies": {
     "babel-core": "^5.8.22",
+    "classnames": "^2.1.3",
+    "material-ui": "^0.10.4",
+    "node-sass": "^3.2.0",
     "react": "^0.13.3",
     "react-router": "^0.13.3",
-    "reapp": "^0.8.28"
+    "react-tap-event-plugin": "^0.1.7",
+    "reapp": "^0.8.28",
+    "sass-loader": "^2.0.1"
   },
   "devDependencies": {
     "cordova": "^5.2.0"
