--- a/package.json
+++ b/package.json
@@ -18,12 +18,17 @@
     "material-ui": "^0.10.4",
     "node-sass": "^3.2.0",
     "react": "^0.13.3",
+    "react-redux": "^0.9.0",
     "react-router": "^0.13.3",
     "react-tap-event-plugin": "^0.1.7",
     "reapp": "^0.8.28",
+    "redux": "^1.0.1",
+    "redux-actions": "^0.7.0",
+    "reselect": "0.0.2",
     "sass-loader": "^2.0.1"
   },
   "devDependencies": {
-    "cordova": "^5.2.0"
+    "cordova": "^5.2.0",
+    "redux-devtools": "^1.1.0"
   }
 }
