--- a/.gitignore
+++ b/.gitignore
@@ -1,7 +1,7 @@
 # Include your project-specific ignores in this file
 # Read about how to use .gitignore: https://help.github.com/articles/ignoring-files
 
-build
+/build
 node_modules
 server_modules
 ncp-debug.log
