--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "reapp": "^0.8.28",
     "redux": "^1.0.1",
     "redux-actions": "^0.7.0",
+    "redux-localstorage": "^0.4.0",
     "reselect": "0.0.2",
     "sass-loader": "^2.0.1"
   },
