--- a/package.json
+++ b/package.json
@@ -13,8 +13,12 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "async": "^1.4.2",
     "babel-core": "^5.8.22",
     "classnames": "^2.1.3",
+    "client-oauth2": "^1.0.0",
+    "es6-promise": "^3.0.2",
+    "isomorphic-fetch": "^2.1.1",
     "material-ui": "^0.10.4",
     "node-sass": "^3.2.0",
     "react": "^0.13.3",
@@ -25,11 +29,12 @@
     "redux": "^1.0.1",
     "redux-actions": "^0.7.0",
     "redux-localstorage": "^0.4.0",
+    "redux-thunk": "^0.1.0",
     "reselect": "0.0.2",
     "sass-loader": "^2.0.1"
   },
   "devDependencies": {
-    "cordova": "^5.2.0",
+    "cordova": "^4.0.0",
     "redux-devtools": "^1.1.0"
   }
 }
