--- a/package.json
+++ b/package.json
@@ -19,11 +19,14 @@
     "client-oauth2": "^1.0.0",
     "es6-promise": "^3.0.2",
     "isomorphic-fetch": "^2.1.1",
-    "material-ui": "^0.10.4",
+    "material-ui": "^0.11.0",
     "node-sass": "^3.2.0",
+    "qs": "^5.0.0",
     "react": "^0.13.3",
+    "react-async": "^2.1.0",
     "react-redux": "^0.9.0",
     "react-router": "^0.13.3",
+    "react-router-component": "^0.26.0",
     "react-tap-event-plugin": "^0.1.7",
     "reapp": "^0.8.28",
     "redux": "^1.0.1",
@@ -31,7 +34,8 @@
     "redux-localstorage": "^0.4.0",
     "redux-thunk": "^0.1.0",
     "reselect": "0.0.2",
-    "sass-loader": "^2.0.1"
+    "sass-loader": "^2.0.1",
+    "url-pattern": "^0.10.0"
   },
   "devDependencies": {
     "cordova": "^4.0.0",
