--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "classnames": "^2.1.3",
     "client-oauth2": "^1.0.0",
     "es6-promise": "^3.0.2",
+    "fixed-data-table": "^0.4.6",
     "isomorphic-fetch": "^2.1.1",
     "material-ui": "^0.11.0",
     "node-sass": "^3.2.0",
