show user's courses on MyCoursesPage

--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "es6-promise": "^3.0.2",
     "fixed-data-table": "^0.4.6",
     "isomorphic-fetch": "^2.1.1",
+    "material-design-icons": "^2.0.0",
     "material-ui": "^0.11.0",
     "node-sass": "^3.2.0",
     "qs": "^5.0.0",
@@ -29,6 +30,7 @@
     "react-router": "^0.13.3",
     "react-router-component": "^0.26.0",
     "react-tap-event-plugin": "^0.1.7",
+    "react-tappable": "^0.6.0",
     "reapp": "^0.8.28",
     "redux": "^1.0.1",
     "redux-actions": "^0.7.0",
