--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "react-redux": "^0.9.0",
     "react-router": "^0.13.3",
     "react-router-component": "^0.26.0",
+    "react-select": "^0.6.7",
     "react-swipe": "^2.3.0",
     "react-tap-event-plugin": "^0.1.7",
     "react-tappable": "^0.6.0",
