--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "classnames": "^2.1.3",
     "client-oauth2": "^1.0.0",
     "es6-promise": "^3.0.2",
+    "fbjs": "^0.4.0",
     "fixed-data-table": "^0.4.6",
     "isomorphic-fetch": "^2.1.1",
     "material-design-icons": "^2.0.0",
@@ -48,7 +49,8 @@
   },
   "devDependencies": {
     "eslint": "^1.4.3",
-    "redux-devtools": "^1.1.0"
+    "redux-devtools": "^1.1.0",
+    "webpack": "^1.12.9"
   },
   "eslintConfig": {
     "ecmaFeatures": {
